--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+      <nav>
+          <a href="index.html">Home</a> |
+          <a href="about.html">About</a> |
+          <a href="contact.php">Contact</a>
+      </nav>
+      <h1>Hello World</h1>
         <!-- layout and content goes here-->
     </body>
 </html>
