--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
+<!DOCTYPE html>
 <html lang="en">
-<html>
-    <head>
-       <meta charset="UTF-8">
-       <title>About Jason Snider</title>
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-      <nav>
-          <a href="index.html">Home</a> |
-          <a href="about.html">About</a> |
-          <a href="contact.php">Contact</a>
-      </nav>
-      <h1>Hello World</h1>
-        <!-- layout and content goes here-->
-    </body>
+  <head>
+      <meta charset="UTF-8">
+      <title>About Jason Snider</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="css/dist/main.css">
+  </head>
+
+  <body>
+
+      <div id="Wrapper">
+
+          <nav class="top-nav">
+              <a href="index.html" class="pull-left" href="/">Site Logo</a>
+              <ul role="navigation">
+                  <li><a href="/">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="contact.php">Contact</a></li>
+              </ul>
+          </nav>
+
+          <div class="row clearfix">
+              <div id="Content" class="col">
+                  <h1>Hello World</h1>
+                  <p>Welcome to my web site.</p>
+              </div>
+              <div id="Sidebar" class="col"></div>
+          </div>
+
+          <div id="Footer" class="clearfix">
+              <small>&copy; 2017 - MyAwesomeSite.com</small>
+              <ul role="navigation">
+                  <li><a href="terms.html">Terms</a></li>
+                  <li><a href="privacy.html">Privacy</a></li>
+              </ul>
+          </div>
+      </div>
+
+  </body>
+
 </html>
