--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <nav class="top-nav">
               <a href="index.html" class="pull-left" href="/">Site Logo</a>
               <ul role="navigation">
-                  <li><a href="/">Home</a></li>
+                  <li><a href="/index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="contact.php">Contact</a></li>
               </ul>
